[gd_scene load_steps=17 format=2]

[ext_resource path="res://_Resources/gui_images/UI board Small  stone.png" type="Texture" id=1]
[ext_resource path="res://UI/CombatScreen/Top/CombatTop.gd" type="Script" id=2]
[ext_resource path="res://_Resources/font/BMYEONSUNG_ttf.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://_Resources/gui_images/Division line.png" type="Texture" id=4]
[ext_resource path="res://_Resources/gui_images/UI board Small  parchment.png" type="Texture" id=5]
[ext_resource path="res://_Resources/gui_images/chain.png" type="Texture" id=6]
[ext_resource path="res://_Resources/gui_images/UI board Medium stone.png" type="Texture" id=7]


[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.376471, 0.411765, 0.419608, 1 )
border_width_left = 5
border_width_top = 5
border_width_bottom = 5
border_color = Color( 0.129412, 0.141176, 0.145098, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.129412, 0.141176, 0.145098, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
resource_local_to_scene = true
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 37
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.545098, 0.133333, 0.133333, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.129412, 0.141176, 0.145098, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.129412, 0.141176, 0.145098, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 3 )

[node name="CombatTop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1470.0
rect_min_size = Vector2( 0, 450 )
script = ExtResource( 2 )

[node name="Main" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 450.0
rect_min_size = Vector2( 0, 560 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HigherBackground" type="HBoxContainer" parent="Main"]
margin_right = 1080.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
size_flags_vertical = 8

[node name="LeftMargin" type="Label" parent="Main/HigherBackground"]
margin_right = 186.0
margin_bottom = 150.0
rect_min_size = Vector2( 70, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Background" type="NinePatchRect" parent="Main/HigherBackground"]
margin_left = 190.0
margin_right = 890.0
margin_bottom = 150.0
rect_min_size = Vector2( 700, 0 )
size_flags_horizontal = 3
texture = ExtResource( 1 )
patch_margin_left = 36
patch_margin_top = 39
patch_margin_right = 35
patch_margin_bottom = 42

[node name="VBoxContainer" type="VBoxContainer" parent="Main/HigherBackground/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Main/HigherBackground/Background/VBoxContainer"]
margin_right = 700.0
margin_bottom = 81.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true

[node name="ZoneInfo" type="Label" parent="Main/HigherBackground/Background/VBoxContainer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_right = -15.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Bandit-Infested Forest: Floor 23"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestProgressBar" type="HBoxContainer" parent="Main/HigherBackground/Background/VBoxContainer"]
margin_top = 85.0
margin_right = 700.0
margin_bottom = 125.0
rect_min_size = Vector2( 0, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftMargin" type="Label" parent="Main/HigherBackground/Background/VBoxContainer/QuestProgressBar"]
margin_right = 12.0
margin_bottom = 40.0
rect_min_size = Vector2( 12, 0 )
size_flags_vertical = 3

[node name="QuestBar" type="ProgressBar" parent="Main/HigherBackground/Background/VBoxContainer/QuestProgressBar"]
margin_left = 16.0
margin_right = 684.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
step = 1.0
value = 50.0
rounded = true
percent_visible = false

[node name="Label" type="Label" parent="Main/HigherBackground/Background/VBoxContainer/QuestProgressBar/QuestBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Quest: Bandit Hunter Progress - 1 / 15"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightMargin" type="Label" parent="Main/HigherBackground/Background/VBoxContainer/QuestProgressBar"]
margin_left = 688.0
margin_right = 700.0
margin_bottom = 40.0
rect_min_size = Vector2( 12, 0 )
size_flags_vertical = 3

[node name="RightMargin" type="Label" parent="Main/HigherBackground"]
margin_left = 894.0
margin_right = 1080.0
margin_bottom = 150.0
rect_min_size = Vector2( 70, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LowerBackground" type="NinePatchRect" parent="Main"]
margin_top = 154.0
margin_right = 1080.0
margin_bottom = 456.0
rect_min_size = Vector2( 0, 256 )
size_flags_vertical = 3
texture = ExtResource( 7 )
patch_margin_left = 30
patch_margin_top = 39
patch_margin_right = 32
patch_margin_bottom = 38
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main/LowerBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MonsterInfo" type="TextureRect" parent="Main/LowerBackground/VBoxContainer"]
margin_right = 1056.0
margin_bottom = 191.0
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="Main/LowerBackground/VBoxContainer/MonsterInfo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 25.0
margin_right = -20.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Main/LowerBackground/VBoxContainer/MonsterInfo/VBoxContainer"]
margin_right = 1016.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Really Big White Wolf of Great Size"
align = 1
valign = 1
clip_text = true

[node name="Line" type="HBoxContainer" parent="Main/LowerBackground/VBoxContainer/MonsterInfo/VBoxContainer"]
margin_top = 76.0
margin_right = 1016.0
margin_bottom = 91.0
rect_min_size = Vector2( 0, 15 )

[node name="LeftMargin" type="Label" parent="Main/LowerBackground/VBoxContainer/MonsterInfo/VBoxContainer/Line"]
margin_right = 75.0
margin_bottom = 15.0
rect_min_size = Vector2( 75, 15 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Main/LowerBackground/VBoxContainer/MonsterInfo/VBoxContainer/Line"]
margin_left = 79.0
margin_right = 937.0
margin_bottom = 15.0
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true

[node name="RightMargin" type="Label" parent="Main/LowerBackground/VBoxContainer/MonsterInfo/VBoxContainer/Line"]
margin_left = 941.0
margin_right = 1016.0
margin_bottom = 15.0
rect_min_size = Vector2( 75, 15 )
size_flags_vertical = 3

[node name="Modifiers" type="Label" parent="Main/LowerBackground/VBoxContainer/MonsterInfo/VBoxContainer"]
margin_top = 95.0
margin_right = 1016.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Rabid - Big - Strong - of Evasion - of Mass - of the Vampire"
align = 1
valign = 1
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="Main/LowerBackground/VBoxContainer"]
margin_top = 195.0
margin_right = 1056.0
margin_bottom = 270.0
rect_min_size = Vector2( 0, 75 )

[node name="LeftMargin" type="Label" parent="Main/LowerBackground/VBoxContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 75.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 3

[node name="MonsterHP" type="ProgressBar" parent="Main/LowerBackground/VBoxContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 902.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
max_value = 1.0
value = 1.0
percent_visible = false

[node name="HPValue" type="Label" parent="Main/LowerBackground/VBoxContainer/HBoxContainer/MonsterHP"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 7 )
text = "100 HP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Main/LowerBackground/VBoxContainer/HBoxContainer/MonsterHP"]

[node name="RightMargin" type="Label" parent="Main/LowerBackground/VBoxContainer/HBoxContainer"]
margin_left = 906.0
margin_right = 1056.0
margin_bottom = 75.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 3

[node name="Effects" type="HBoxContainer" parent="Main"]
margin_top = 460.0
margin_right = 1080.0
margin_bottom = 560.0
rect_min_size = Vector2( 0, 100 )

[node name="Chain" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftMargin" type="Label" parent="Chain"]
margin_right = 73.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftChain" type="TextureRect" parent="Chain"]
margin_left = 77.0
margin_right = 109.0
margin_bottom = 160.0
rect_min_size = Vector2( 32, 0 )
texture = ExtResource( 6 )
expand = true

[node name="LeftMargin2" type="Label" parent="Chain"]
margin_left = 113.0
margin_right = 186.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterMargin" type="Label" parent="Chain"]
margin_left = 190.0
margin_right = 890.0
margin_bottom = 160.0
rect_min_size = Vector2( 700, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RightMargin2" type="Label" parent="Chain"]
margin_left = 894.0
margin_right = 967.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RightChain" type="TextureRect" parent="Chain"]
margin_left = 971.0
margin_right = 1003.0
margin_bottom = 160.0
rect_min_size = Vector2( 32, 0 )
texture = ExtResource( 6 )
expand = true

[node name="RightMargin" type="Label" parent="Chain"]
margin_left = 1007.0
margin_right = 1080.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
